--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,23 @@
   font-family: monsterrat;
 }
 
+.heading-1 {
+  color: #ffffff;
+  font-size: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.server-div {
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
+  background: #121212;
   font-family: monsterrat;
 }
 
@@ -12,13 +28,15 @@ input {
 }
 
 input {
-  font-size: 24px;
+  font-size: 18px;
   display: table-cell;
+  width: 20%;
   padding: 20px;
 }
 
 label {
-  padding-right: 10px;
+  padding-right: 20px;
+  font-size: 24px;
 }
 
 .button-choices {
