--- a/style/style.css
+++ b/style/style.css
@@ -3,11 +3,93 @@
   font-family: monsterrat;
 }
 
-.heading-1 {
-  color: #ffffff;
-  font-size: 100px;
+
+
+footer {
+  width: 99%;
+  color: #eee;
+  position: absolute;
+  text-align: center;
+  bottom: 3%;
+}
+
+#winner-status {
+  color: #fff;
   display: flex;
+  justify-content: center;
+  font-size: 50px;
+}
+
+#p2-chosen-status {
+  border: 2px solid #696969;
+  color: #fff;
+  position: absolute;
+  right: 25%;
+  top: 33%;
+  width: 200px;
+  height: 200px;
+  filter: drop-shadow(2px 2px 2px #434343)
+}
+
+#p1-chosen-status {
+  border: 2px solid #696969;
+  color: #fff;
+  position: absolute;
+  left: 25%;
+  top: 34%;
+  width: 200px;
+  height: 200px;
+  filter: drop-shadow(2px 2px 2px #434343)
+}
+
+.vert-divider {
+  border-left: px solid #fff;
+  background: #FFF;
+  width: 1px;
+  height: 75%;
+  position: absolute;
+  right: 50%;
+  top: 12%;
+}
+
+.player-one-identifier {
+  padding-left: 3px;
+  position: relative;
+  display: flex;
+  top: 2px;
   align-items: center;
+  font-size: 12px;
+}
+
+.player-two-identifier {
+  padding-left: 3px;
+  position: relative;
+  display: flex;
+  top: 2px;
+  align-items: center;
+  font-size: 12px;
+}
+
+.player-one-heading {
+  color: #fff;
+  display: flex;
+  position: fixed;
+  top: 10%;
+  left: 25%;
+}
+.player-two-heading {
+  color: #fff;
+  display: flex;
+  position: fixed;
+  top: 10%;
+  right: 25%;
+}
+
+.heading-title {
+  color: #fff;
+  font-size: 100px;
+  position: static;
+  display: flex;
   justify-content: center;
 }
 
@@ -19,41 +101,75 @@
 }
 
 body {
-  background: #121212;
+  background: #151515;
   font-family: monsterrat;
 }
 
 input {
-  font-family: monsterrat;
+  font-family: monsterrat; 
+  font-size: 12px;
+  width: 10%;
+  height: 15px;
+  padding: 10px;
 }
 
-input {
-  font-size: 18px;
-  display: table-cell;
-  width: 20%;
-  padding: 20px;
+#p1-confirm {
+  position: absolute;
+  top: 55%;
+  left: 25%;
+  font-family: monsterrat; 
+  font-size: 24px;
+  width: 10%;
+  height: 7%;
+  padding: 10px;
+}
+
+#p2-confirm {
+  position: absolute;
+  top: 55%;
+  right: 25%;
+  font-family: monsterrat; 
+  font-size: 24px;
+  width: 10%;
+  height: 7%;
+  padding: 10px;
 }
 
 label {
-  padding-right: 20px;
-  font-size: 24px;
+  color: #fff;
+  padding-right: 10px;
+  padding-left: 5px;
+  font-size: 22px;
 }
 
-.button-choices {
-  padding: 2px;
-  border: none;
+.p1-button-choices {
+  border: 2px dashed #696969;
   width: 150px;
   height: 150px;
 }
 
-.p1-controls {
-  display: flex;
-  align-items: center;
+.p1-button-choices-div {
+  position: fixed;
+  top: 35%;
+  left: 16.75%;
+  padding: 13px;
+  padding-bottom: 10px;
+  border: 1px solid #fff;
 }
 
-.p2-controls {
-  display: flex;
-  align-items: center;
+.p2-button-choices {
+  border: 2px dashed #696969;
+  width: 150px;
+  height: 150px;
+}
+
+.p2-button-choices-div {
+  position: fixed;
+  top: 35%;
+  right: 16.75%;
+  padding: 13px;
+  padding-bottom: 10px;
+  border: 1px solid #fff;
 }
 
 .chosen-status {
